PROD-1988 - Fix View tutorial button alignment issue in RTL mode

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -2236,6 +2236,7 @@ h2.has_tutorial_btn {
 h2.has_tutorial_btn .bbapp-tutorial-btn {
   position: absolute;
   left: 0;
+  right: initial;
   top: 5px;
   font-weight: 400;
 }
