--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -2359,6 +2359,7 @@ h2.has_tutorial_btn {
 	.bbapp-tutorial-btn {
 		position: absolute;
 		right: 0;
+		left: initial;
 		top: 5px;
 		font-weight: 400;
 
